--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 1.0.0
 Section: utils
 Priority: optional
 Architecture: amd64
-Depends: python3, python3-pyqt5, python3-pip, espeak-ng, pulseaudio-utils, alsa-utils
+Depends: python3 (>= 3.8), python3-pyqt5, python3-pip, espeak-ng, mpg123, pulseaudio-utils, alsa-utils, portaudio19-dev
 Maintainer: Samantha OS <samantha@example.com>
 Description: Samantha OS - AI Assistant inspired by "Her" (2013)
  A warm, emotionally intelligent AI companion with minimalist interface.
